--- a/src/pages/channels/channels.html
+++ b/src/pages/channels/channels.html
@@ -7,7 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>ChannelsPage</ion-title>
+    <ion-title>Channels</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="showAddChannelDialog()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
