--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,6 +8,9 @@
 
   <ion-navbar>
     <ion-title>ProfilePage</ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="navigateToEditPage()">EDIT</button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -15,6 +18,8 @@
 
 <ion-content>
 
-  <app-profile-view></app-profile-view>
+  <app-profile-view (existingProfile)="getExistingProfile($event)"></app-profile-view>
+
+  <button ion-button block (click)="signOut()">Logout</button>
 
 </ion-content>
