--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Inbox"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Channels"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Profile"></ion-tab>
+  <ion-tab [tabsHideOnSubPages]="true" [root]="tab1Root" tabTitle="Inbox"></ion-tab>
+  <ion-tab [tabsHideOnSubPages]="true" [root]="tab2Root" tabTitle="Channels"></ion-tab>
+  <ion-tab [tabsHideOnSubPages]="true" [root]="tab3Root" tabTitle="Profile"></ion-tab>
 </ion-tabs>>
