--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -14,5 +14,5 @@
 
 
 <ion-content padding>
-  <app-edit-profile-form (saveProfileResults)="saveProfileResult($event)"></app-edit-profile-form>
+  <app-edit-profile-form [profile]="profile" (saveProfileResults)="saveProfileResult($event)"></app-edit-profile-form>
 </ion-content>
