added online users

--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -20,6 +20,8 @@
 
 <ion-content padding>
 
+  <app-online-users></app-online-users>
+
   <ion-list>
     <ion-item *ngFor="let message of messageList">
       <ion-avatar>
