--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -13,12 +13,12 @@
 </ion-header>
 
 <ion-content padding>
-    <app-chat-message *ngFor="let message of messageList; let index = index"
-      [chatMessage]="message" [chatIndex]="index"></app-chat-message>
+    <app-chat-message *ngFor="let message of messageList | async"
+      [chatMessage]="message" [userId]="userId"></app-chat-message>
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
-    <app-send-message-box></app-send-message-box>
+    <app-send-message-box (sendMessage)="sendMessage($event)"></app-send-message-box>
   </ion-toolbar>
 </ion-footer>
